--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,4 +2,10 @@
 layout: default
 ---
 
-<h1>Hola!</h1>
+{%- for post in site.posts -%}
+    <div>
+        <h1>{{ post.title }}</h1>
+        <h2>{{ post.content }}</h2>
+        <a href="{{ post.url }}">Go to basics</a>
+    </div>
+{%- endfor -%}
