updated about me to main section, added to basics, and added new post with nmap

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,42 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
       </div>
     </header>
+    
+    <div class="me" style="padding-left: 60px; cursor: default;">
+      <section id="about-me" style="margin-bottom: 40px; padding-left: 20px;">
+        <h2 style="color: azure; border-bottom: 1px solid #333; padding-bottom: 10px;">About me</h2>
+        <p style="line-height: 1.6;">
+          Hey there! Alfred here.
+        </p>
+        <p style="line-height: 1.6;">
+          I’m a Computer Engineering graduate with a strong interest in IT and cybersecurity, with hands-on experience in <strong>Linux</strong>, <strong>networking</strong>, and <strong>basic web technologies</strong>.
+        </p>
+      </section>
+
+      <section id="contact-me" style="padding-left: 20px;">
+        <h2 style="color: azure; border-bottom: 1px solid #333; padding-bottom: 10px;">Contact me</h2>
+        <ul style="list-style: none; padding-left: 0;">
+
+            <a href="https://github.com/mrallfredii" style="color: #666; text-decoration: none; font-family: monospace;">
+              [GitHub]
+            </a>
+
+            <hr>
+
+            <a href="https://www.linkedin.com/in/alfred-manuel-martinez/" style="color: #666; text-decoration: none; font-family: monospace; ">
+              [LinkedIn]
+            </a>
+
+            <hr>
+
+            <a href="https://twitter.com/mrallfredii" style="color: #666; text-decoration: none; font-family: monospace;">
+              [Twitter / X]
+            </a>
+            <hr>
+        </ul>
+      </section>
+
+    </div>
 
     <div class="container">
       <section id="main_content">
